{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 128,
  "lineage": "146a9d9a-c966-aa61-4418-9a7b50f3d96b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:security-group/sg-06dd74358e3ac233c",
            "description": "Allow HTTP \u0026 HTTPS inbound traffic",
            "filter": null,
            "id": "sg-06dd74358e3ac233c",
            "name": "allow_http_https",
            "tags": {
              "Group": "mts-dev"
            },
            "vpc_id": "vpc-01c83c4e413bc6625"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:security-group/sg-030d55732d3b28369",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-030d55732d3b28369",
            "name": "default",
            "tags": {},
            "vpc_id": "vpc-01c83c4e413bc6625"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:830394630098:vpc/vpc-01c83c4e413bc6625",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-002b5bb816a3e1dde",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-09f2dbc1b74335fcf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01c83c4e413bc6625",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0605c9d0c553befac",
            "owner_id": "830394630098",
            "tags": {
              "Group": "mts-dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:listener/app/mts-dev-mts-web/3c210b9daefe08fb/c9bfa87db5540fc2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:listener/app/mts-dev-mts-web/3c210b9daefe08fb/c9bfa87db5540fc2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:loadbalancer/app/mts-dev-mts-web/3c210b9daefe08fb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "data.aws_security_group.allow_http_https",
            "data.aws_security_group.default",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:listener/app/mts-dev-mts-web/3c210b9daefe08fb/b17dd8ad993b7bb1",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:830394630098:certificate/4934c636-145a-459c-b9a1-f71f8fedcd97",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:targetgroup/mts-dev-mts-web/d083f621857d3319",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:listener/app/mts-dev-mts-web/3c210b9daefe08fb/b17dd8ad993b7bb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:loadbalancer/app/mts-dev-mts-web/3c210b9daefe08fb",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_lb.alb",
            "aws_lb_target_group.target_group",
            "data.aws_security_group.allow_http_https",
            "data.aws_security_group.default",
            "data.aws_subnets.public",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:loadbalancer/app/mts-dev-mts-web/3c210b9daefe08fb",
            "arn_suffix": "app/mts-dev-mts-web/3c210b9daefe08fb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "mts-dev-mts-web-1872979262.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:loadbalancer/app/mts-dev-mts-web/3c210b9daefe08fb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mts-dev-mts-web",
            "security_groups": [
              "sg-030d55732d3b28369",
              "sg-06dd74358e3ac233c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d4f54b8822934912"
              },
              {
                "subnet_id": "subnet-0e24322da3d24711e"
              }
            ],
            "subnets": [
              "subnet-0d4f54b8822934912",
              "subnet-0e24322da3d24711e"
            ],
            "vpc_id": "vpc-01c83c4e413bc6625",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "data.aws_security_group.allow_http_https",
            "data.aws_security_group.default",
            "data.aws_subnets.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:targetgroup/mts-dev-mts-web/d083f621857d3319",
            "arn_suffix": "targetgroup/mts-dev-mts-web/d083f621857d3319",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:830394630098:targetgroup/mts-dev-mts-web/d083f621857d3319",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "mts-dev-mts-web",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-01c83c4e413bc6625"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}